<resources>
    <string name="app_name">LRN</string>
    <string name="action_settings">Settings</string>
    <string name="parse_app_id">0RJ0atHb0FW0VoyPgXlgassPWPgQqYRw1T5052Zg</string>
    <string name="parse_client_key">iLaWpOMZwgVi2Uya9XhKzQRTtfBSry8WuzVj4P6b</string>

    <string name="name">Name of person</string>
    <string name="skillsIWant">Skills that I want</string>
    <string name="skillsITeach">Skills That I teach</string>
    <string name="skillsINeed">Skils that I need</string>
    <string name="classesTaking">Classes taking</string>
    <string name="classesTaken">Classes taken</string>
    <string name="edit_profile">Edit profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="log_in">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_graph_view">GraphActivity</string>
    <string name="google_app_id">170886441435</string>
    <string name="title_activity_maps">Map</string>

</resources>
