<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jeff.michael.heesung.lrn.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageview_app_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:padding="32dp"
        android:background="#2DABFF"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_menu_share"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="12pt"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skillsIWant"
        android:textSize="12pt"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skillsITeach"
        android:textSize="12pt"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classesTaking"
        android:textSize="12pt"
        android:gravity="center"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classesTaken"
        android:textSize="12pt"
        android:gravity="center"/>

</LinearLayout>
